Implement updating game
Add update game request model
Add update game to game service
